fixed alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,6 +25,9 @@
   background-color: #363636;
   height: 100%;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .container {
